--- a/papis2017-boston.bib
+++ b/papis2017-boston.bib
@@ -1,6 +1,6 @@
 @Proceedings{PAPIs-2016,
   booktitle={Proceedings of The 4th International Conference on Predictive Applications and APIs},
-  name={International Conference on Predictive Applications and APIs}
+  name={International Conference on Predictive Applications and APIs},
   shortname={PAPIs},
   year={2017},
   editor={Hardgrove, Claire and Dorard, Louis and Thompson, Keiran},
@@ -8,7 +8,8 @@
   start={20161024},
 	end={20161025},
 	address={Microsoft NERD, Boston, USA},
-	url={https://www.papis.io/2017/program/}
+	url={https://www.papis.io/2017/program/},
+	published={20180809}
 }
 
 @InProceedings(hardgrove17,
